# iota-verbum-legacy

./: .gitignore  README.md
apps/iota_verbum/: ### Iota Credit Attestation Templat.txt  .gitignore  LEGACY_CONSUMES_CORE.md  MIGRATION_PLAN.md  PLANS.md  README.md  REPORT_iota_verbum_modal_code.md  WHITEPAPER_INPUT_DOSSIER.md  capture_state.ps1  config.yaml  deterministic_ai.py  finish_build.ps1  init_hre_sandbox.ps1  iota_engine.py  iota_logos_demo.html  iota_logos_demo.ps1  iv.py  iv_api_smoke_test.py  iv_build_phase11_12.ps1  iv_build_phase5_6.ps1  iv_build_phase8.ps1  iv_build_phase9_10.ps1  iv_build_phases8_12.ps1  iv_build_report.ps1  iv_finish_all.ps1  iv_show_simple.ps1  iv_status.ps1  iv_witness_card.py  iv_witness_card_v2.py  iv_witness_card_v3.py  iv_witness_card_v4.py  ivb_attest.py  lexicons.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  rules.yaml  somb_agent.py  somb_audit.py  (+5 more)
apps/iota_verbum/api/: axiom_lambda_demo.py  main.py
apps/iota_verbum/config/: iv_pairs.yaml  original_language_sources.yaml
apps/iota_verbum/configs/: hierarchy.yaml  scripture_anchors.yaml
apps/iota_verbum/console/: app.py
apps/iota_verbum/copyright/: COPYRIGHT.txt
apps/iota_verbum/core/: __init__.py  attestation.py  extraction.py  manifest.py  pipeline.py  templates.py
apps/iota_verbum/data/: annotations.txt  canonical_arcs.json  canonical_hinges.json  canonical_hinges_micro_deut_pattern.json  iv_pairs.json  languages.yaml  variants_example.json  variants_provenance_example.json  whitepaper_lambda.tex
apps/iota_verbum/docs/: 00_founder_vocation.md  Connah_Maddison_Gabriella.txt  Modal_Beauty_v0.1.md  Modal_Grammar_v1.0.md  Modal_Holiness_v0.1.md  Modal_Justice_v0.1.md  NEXT_PHASES.md  REPO_SPLIT.md  System_Spec_HRE_v1.docx  api_reference.md  build_state_v0_3.md  canonical_arcs_spec_v1.md  deterministic_ai_architecture.md  (+15 more)
(+691 files in other folders)
