[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iota-witness-api"
version = "0.1.0"
description = "IOTA Witness Companion API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.32.0",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "openai>=1.57.0",
  "reportlab>=4.0",
  "httpx>=0.28.1",
  "tenacity>=9.0.0",
  "redis>=5.2.1",
  "jinja2>=3.1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.2",
  "mypy>=1.13.0",
  "httpx>=0.28.1",
  "types-requests"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
mypy_path = "."
exclude = ["alembic"]
